...
            </Animated.View>
          )}
        </TouchableOpacity>

        <View style={styles.footer}>
          <Button
            title="Get Started"
            onPress={() => setBottomSheetVisible(true)}
            backgroundColor="#1E5128"
            textStyle={styles.buttonText}
          />
        </View>
      </SafeAreaView>
...
            backgroundColor="#1E5128"
            textColor="#B7ED7E"
            borderRadius={24}
          />
          <View style={{ height: 16 }} />
          <Button
            title="Create Account"
            onPress={() => navigation.navigate("SignUpNumber")}
            backgroundColor="#B7ED7E"
            textColor="#1E5128"
            borderRadius={24}
          />
        </Animated.View>
...
