...
            { useNativeDriver: false },
          )}
          scrollEventThrottle={16}
        >
          <Text style={styles.title}>What is your{"\n"}employment status?</Text>

          <Text style={styles.label}>Employment</Text>

          <View style={styles.optionsContainer}>
            {EMPLOYMENT_OPTIONS.map(renderOption)}
          </View>
        </Animated.ScrollView>

...
